--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.php">
             <img src="" alt="Logo" title="Logo" class="d-inline-block align-text-top">
